# game_ws

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: gradle-daemon-jvm.properties
build_script/: Dockerfile  build_all.sh  build_in_docker.sh  install_deps_mac.sh
common/rust/: Cargo.toml  ws_test.html
common/rust/src/: broadcast.rs  client.rs  game_state.rs  lib.rs  main.rs  net.rs  room.rs  runtime.rs  server.rs  transport.rs
landlord/: ws_test.html
landlord/android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
landlord/android/app/: build.gradle.kts
landlord/rust/: Cargo.toml
landlord/rust/src/: android_jni.rs  game.rs  game_loop.rs  game_setting.rs  game_state.rs  lib.rs  main.rs  play_validator.rs  protocol.rs  server.rs
landlord/rust/src/core/: play.rs
landlord/rust/tests/: integration_flow.rs
rust/: official_membership_e2e.rs
rust/common/: Cargo.toml
rust/common/src/: android.rs  cli.rs  client.rs  game_setting.rs  game_state.rs  lib.rs  net.rs  official.rs  room.rs  runtime.rs  transport.rs
rust/holdem/: Cargo.toml
rust/holdem/src/: ai.rs  android_jni.rs  game.rs  game_setting.rs  game_state.rs  hand_evaluator.rs  lib.rs  main.rs  official.rs  poker_variant.rs  server.rs
rust/landlord/: Cargo.toml  ws_test.html
rust/landlord/src/: ai_fallback.rs  android_jni.rs  game.rs  game_loop.rs  game_setting.rs  game_state.rs  lib.rs  main.rs  official.rs  server.rs
rust/landlord/src/ai/: belief.rs  bidding.rs  candidates.rs  mod.rs  playing.rs  search.rs  simulation.rs
rust/landlord/src/core/: play.rs
rust/landlord/tests/: ai_capability.rs  integration_flow.rs  official_membership.rs
rust/p2p/: Cargo.toml  README.md
rust/p2p/src/: android_jni.rs  config.rs  lib.rs  main.rs  runtime.rs  server.rs  turn_server.rs
rust/p2p/tests/: signaling.rs
rust/shenyang_mahjong/: Cargo.toml  ai.md  rule.md
rust/shenyang_mahjong/src/: ai_fallback.rs  android_jni.rs  game.rs  game_loop.rs  game_setting.rs  game_state.rs  lib.rs  main.rs  official.rs  rules.rs  server.rs
rust/shenyang_mahjong/src/ai/: decision.rs  engine.rs  mod.rs  observation.rs
rust/shenyang_mahjong/src/ai/decision/: README.md  claim.rs  defense.rs  discard.rs  hand.rs  meld.rs  mod.rs  piao.rs  pure_one_suit.rs  round.rs  score.rs  self_gang.rs  seven_pairs.rs  shenyang_rule.rs  table.rs  tests.rs  tile.rs  types.rs  xi_gang.rs
rust/shenyang_mahjong/src/ai/decision/claim/: chi_choice.rs  defensive_open.rs  gang.rs  gang_choice.rs  mod.rs  options.rs  peng.rs  peng_choice.rs  preserve.rs  requirements.rs
rust/shenyang_mahjong/src/ai/decision/claim/peng/: basic.rs  defense.rs  mod.rs  piao.rs  preserve.rs  ready.rs
rust/shenyang_mahjong/src/ai/decision/defense/: broken.rs  closed.rs  late.rs  missing_suit.rs  mod.rs  piao_threat.rs  public_safety.rs  pure_threat.rs  ting_threat.rs
rust/shenyang_mahjong/src/ai/decision/discard/: bias.rs  defense.rs  mod.rs  sequences.rs
rust/shenyang_mahjong/src/ai/decision/hand/: counts.rs  mod.rs  power.rs  requirements.rs  sequences.rs  suits.rs
rust/shenyang_mahjong/src/ai/decision/piao/: discard.rs  mod.rs  plan.rs  single_wait.rs
rust/shenyang_mahjong/src/ai/decision/score/: fan.rs  mod.rs  pressure.rs  progress.rs  readiness.rs
rust/shenyang_mahjong/src/ai/decision/seven_pairs/: discard.rs  mod.rs  plan.rs  wait.rs
rust/shenyang_mahjong/src/ai/decision/shenyang_rule/: discard.rs  heng.rs  mod.rs  progress.rs
rust/shenyang_mahjong/src/ai/decision/table/: live.rs  mod.rs  position.rs  remaining.rs  seat.rs  visibility.rs
rust/shenyang_mahjong/src/ai/decision/tests/: claim.rs  defense.rs  discard.rs  misc.rs  mod.rs  piao.rs  pure_one_suit.rs  score.rs  self_gang.rs  seven_pairs.rs  shenyang_rule.rs  xi_gang.rs
rust/shenyang_mahjong/src/ai/decision/tests/claim/: chi.rs  gang.rs  hu.rs  mod.rs  peng.rs
rust/shenyang_mahjong/src/ai/decision/tests/claim/peng/: basic.rs  dealer.rs  defense.rs  mod.rs  piao.rs  pure_one_suit.rs  ready.rs  requirements.rs  seven_pairs.rs
rust/shenyang_mahjong/src/ai/decision/tests/defense/: broken_public.rs  closed_threat.rs  dealer.rs  missing_suit.rs  mod.rs  piao_threat.rs  public_safety.rs  pure_threat.rs  ting_threat.rs  wait_choice.rs  wait_fan.rs
rust/shenyang_mahjong/src/ai/decision/tests/piao/: defense.rs  discard.rs  mod.rs  plan.rs  single_wait.rs  threat.rs
rust/shenyang_mahjong/src/game/: handler.rs  mod.rs  tests.rs
rust/shenyang_mahjong/src/game/tests/: action.rs  claim.rs  claim_resolution.rs  lifecycle.rs  mod.rs  self_draw_and_gang.rs  settlement_fan.rs  settlement_score.rs  snapshot.rs  xi_gang.rs
rust/shenyang_mahjong/tests/: ai_capability.rs  integration_flow.rs  official_membership.rs
rust/texas_hold_em/: Cargo.toml
rust/texas_hold_em/src/: game.rs  game_state.rs  lib.rs
rust/tractor/: Cargo.toml  rule.md
rust/tractor/src/: ai.rs  ai_fallback.rs  android_jni.rs  combo.rs  game.rs  game_loop.rs  game_setting.rs  game_state.rs  lib.rs  main.rs  official.rs  server.rs
rust/tractor/src/ai/: bid.rs  blood.rs  bury.rs  knowledge.rs  mod.rs
rust/tractor/tests/: ai_capability.rs  integration_flow.rs  official_membership.rs
rust/upgrade/: Cargo.toml
rust/upgrade/src/: game.rs  game_setting.rs  game_state.rs  main.rs  server.rs
rust/upgrade/tests/: integration_flow.rs
share_type_public/: Cargo.toml  README.md
share_type_public/src/: common.rs  const.rs  lib.rs  settings.rs  ws.rs
share_type_public/src/games/: landlord.rs  mod.rs  p2p.rs  shenyang_mahjong.rs  texas_hold_em.rs  tractor.rs  upgrade.rs
shenyang_mahjong/rust/: Cargo.toml
texas_hold_em/rust/: Cargo.toml
(+35 files in other folders)
