[package]
name = "ws_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
if-addrs = "0.13"
share_type_public = { path = "../../share_type_public" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
