[package]
name = "p2p"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
android-jni = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
hmac = "0.12"
serde = "1"
serde_json = "1"
sha1 = "0.10"
share_type_public = { path = "../../share_type_public" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.29"
turn = "0.17.1"
util = { package = "webrtc-util", version = "0.17.1", default-features = false, features = ["conn", "vnet"] }

[target.'cfg(target_os = "android")'.dependencies]
ws_common = { path = "../common" }
