[package]
name = "tractor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
android-jni = []
official = ["dep:data"]

[dependencies]
anyhow = "1"
data = { path = "../../../data", optional = true }
rand = "0.9"
serde = "1"
serde_json = "1"
share_type_public = { path = "../../share_type_public" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
ws_common = { path = "../common" }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.29"
